--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
         </div>
     </section>
     <section class="tasks" id="tasks">
-        <div class="tasks__info" id="tasks__info"></div>
+        <div class="tasks__info" id="tasks__info">
+            <h2 class="info__pending-tasks"></h2>
+            <h2 class="info__completed-tasks"></h2>
+        </div>
+        <div class="tasks__add-task">
+            <a href="add.html">Agregar tarea</a>
+        </div>
     </section>
 </body>
 <footer>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
     <script src="https://kit.fontawesome.com/8fd88ba57c.js" crossorigin="anonymous"></script>
 </footer>
 </html>
