Finished the add functionality

--- a/add.html
+++ b/add.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="add.css">
+    <link href="https://api.fontshare.com/v2/css?f[]=general-sans@701,401,400,700&display=swap" rel="stylesheet">
     <title>Agregar Tarea</title>
 </head>
 <body>
@@ -10,7 +12,7 @@
         <a href="./index.html" class="frame__back">Volver</a>
         <form id="newTask">
             <input type="text" id="taskName" placeholder="Ingrese el nombre de la tarea" required>
-            <input type="submit" value="Agregar tarea">
+            <input type="submit" value="Agregar tarea" id="submitButton">
         </form>
     </section>
 </body>
